Placeholder images. Fixed image squish on load issue.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -66,6 +66,7 @@
   width: 200px;
   border: 1px solid black;
   margin: 1rem 3rem 3rem 3rem;
+  flex-shrink: 0;
 }
 
 .flex-row{
